# rust-gl

./: .gitattributes  .gitignore  .gitmodules  .gproj  Cargo.toml  README.md  build.rs  clippy.toml  flake.nix  imgui.ini  rust-toolchain.toml
examples/: chapel.rs  drawing_test.rs  instanced_cubes.rs  main.rs  mandelbrot.rs  spirv-cube.rs  untextured_cube.rs
notes/: note.md
objects/: chapel scan decimated.glb  chapel scan.glb  chapel.mtl  lplychapel.glb  monkey_test.mtl
objects/chapel/: chapel scan.gltf
shaders/: Cargo.toml  base_shader.frag  base_shader.vert  drawing_shader.frag  drawing_shader.vert  mandelbrot.frag  mandelbrot.vert  noise_shader.frag  noise_shader.vert  orientation_shader.frag  orientation_shader.vert  pixel_shader.frag  pixel_shader.vert  pos_shader-vk.frag  pos_shader-vk.vert  pos_shader.frag  pos_shader.geo  pos_shader.vert  pos_shader.vert.spv  screen_shader.frag
shaders/.cargo/: config.toml
shaders/src/: lib.rs
src/: buffer.rs  drawing.rs  glutil.rs  lib.rs  main.rs  renderable.rs  shader.rs  transformation.rs  util.rs
src/engine/: mod.rs  renderable.rs  shader.rs  transformation.rs  util.rs
